Made sidedebar thumbnails as dead links and set the background colors to right ones.

--- a/index.html
+++ b/index.html
@@ -148,47 +148,47 @@
             </div>
             <div class="video-recommendations">
                 <div class="upnext">Upnext</div>
-                <div class="sidebar-video">
+                <a class="sidebar-video" href="javascript:void(0)">
                     <img class="sidebar-video-thumbnail" alt="Video thumbnail" src="https://i.ytimg.com/vi/yoW2jHoVdug/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&amp;rs=AOn4CLDc74dU_BQD5f27CkFi1Ca-_ii7wg">
                     <div class="sidebar-video-info">
                         <div class="sidebar-video-title">How to convert PDF to word without software</div>
                         <div>karim hamdadi</div>
                         <div>16 M views</div>
                     </div>
-                </div>
+                </a>
                 <div class="separator"></div>
-                <div class="sidebar-video">
+                <a class="sidebar-video" href="javascript:void(0)">
                     <img class="sidebar-video-thumbnail" alt="Video thumbnail" src="https://i.ytimg.com/vi/xLetZ-36TYs/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBv_PfxS2PSA8raLm9rlhn2NUVBMQ">
                     <div class="sidebar-video-info">
                         <div class="sidebar-video-title">Lofi hip hop mix - Beats to Relax/Study to [2019]</div>
                         <div>ChilledCow</div>
                         <div>2 M views</div>
                     </div>
-                </div>
-                <div class="sidebar-video">
+                </a>
+                <a class="sidebar-video" href="javascript:void(0)">
                     <img class="sidebar-video-thumbnail" alt="Video thumbnail" src="https://i.ytimg.com/vi/IjWfwkLSKtA/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLCYVTIMrWIti14rPnuSbNwTGLsiAg">
                     <div class="sidebar-video-info">
                         <div class="sidebar-video-title">Chilled Tide Beats 🎧 Lofi Hip Hop - Study Music</div>
                         <div>ChilledTideBeats</div>
                         <div>2 M views</div>
                     </div>
-                </div>
-                <div class="sidebar-video">
+                </a>
+                <a class="sidebar-video" href="javascript:void(0)">
                     <img class="sidebar-video-thumbnail" alt="Video thumbnail" src="https://i.ytimg.com/vi/suTYbf-FtXg/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBKRTQ220gEhTU6eMgope41pwN02Q">
                     <div class="sidebar-video-info">
                         <div class="sidebar-video-title">Oblivion | Chillout Mix</div>
                         <div>ChilloutDeer</div>
                         <div>4 M views</div>
                     </div>
-                </div>
-                <div class="sidebar-video">
+                </a>
+                <a class="sidebar-video" href="javascript:void(0)">
                     <img class="sidebar-video-thumbnail" alt="Video thumbnail" src="https://i.ytimg.com/vi/fQLK8Ib_SKk/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBpaGMGmUz_Tt_Ov2kMTXh4XkGllw">
                     <div class="sidebar-video-info">
                         <div class="sidebar-video-title">Git & GitHub Tutorial for Beginners #10 - Introduction to GitHub</div>
                         <div>The Net Ninja</div>
                         <div>45 T views</div>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </div>
