Corrected main video title color and font metrics.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="separator"></div>
             </div>
             <div class="video-recommendations">
-                <div class="upnext">Upnext</div>
+                <div class="up-next">Up Next</div>
                 <a class="sidebar-video" href="javascript:void(0)">
                     <img class="sidebar-video-thumbnail" alt="Video thumbnail" src="https://i.ytimg.com/vi/yoW2jHoVdug/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&amp;rs=AOn4CLDc74dU_BQD5f27CkFi1Ca-_ii7wg">
                     <div class="sidebar-video-info">
