--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <a class="logo">
             <svg viewBox="0 0 200 60" preserveAspectRatio="xMidYMid meet" focusable="false">
-                <g viewBox="0 0 200 60" preserveAspectRatio="xMidYMid meet">
+                <g>
                     <g>
                         <path fill="#FF0000" d="M63,14.87c-0.72-2.7-2.85-4.83-5.56-5.56C52.54,8,32.88,8,32.88,8S13.23,8,8.32,9.31
                         c-2.7,0.72-4.83,2.85-5.56,5.56C1.45,19.77,1.45,30,1.45,30s0,10.23,1.31,15.13c0.72,2.7,2.85,4.83,5.56,5.56
@@ -91,7 +91,7 @@
                 </svg>                                                          
             </a>
             <a href="javascript:void(0)">
-                <img class="avatar-image" src="https://image.flaticon.com/icons/png/512/64/64572.png">
+                <img class="avatar-image" src="https://image.flaticon.com/icons/png/512/64/64572.png" alt="User profile picture">
             </a>
         </div> 
     </nav>
@@ -99,7 +99,7 @@
     <div class="main-outer-div">
         <div class="main-content">
             <div class="main-video">
-                <iframe src="https://www.youtube.com/embed/ZnuwB35GYMY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/ZnuwB35GYMY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h1 class="main-video-title">How To Embed A Youtube Video</h1>
                 <div class="info">
                     <div class="info-text">
