--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
         <form class="search">
             <input class="search-input " type="search" placeholder="Search" aria-label="Search">
-            <button class="search-button" type="button">
+            <button class="search-button" type="submit" onclick="return false;">
                 <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false"><g>
                     <path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path>
                 </g></svg>                                        
@@ -99,9 +99,25 @@
         <div class="main-content">
 
             <div class="main-video">                    
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/ZnuwB35GYMY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/ZnuwB35GYMY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h1 class="video-title">How To Embed A Youtube Video</h1>
-                
+                <div class="info">
+                    <div class="views">
+                        <span>237,353 views</span>
+                        <span class="dot">•</span>
+                        <span>15 Mar 2013</span>
+                    </div>
+                    <div class="menu">
+                        <a href="javascript:voud(0)">
+                            <svg class="menu-icon" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false">
+                                <g>
+                                    <path d="M1 21h4V9H1v12zm22-11c0-1.1-.9-2-2-2h-6.31l.95-4.57.03-.32c0-.41-.17-.79-.44-1.06L14.17 1 7.59 7.59C7.22 7.95 7 8.45 7 9v10c0 1.1.9 2 2 2h9c.83 0 1.54-.5 1.84-1.22l3.02-7.05c.09-.23.14-.47.14-.73v-1.91l-.01-.01L23 10z"></path>
+                                </g>
+                            </svg>
+                            <span>628</span>
+                        </a>
+                    </div>
+                </div>
             </div>
 
             <aside>
