Try to make it more responsive.

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="separator"></div>
             </div>
-            <aside>
+            <aside class="video-recommendations">
                 <a class="sidebar-video" href="javascript:void(0)">                 
                     <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/yoW2jHoVdug/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&amp;rs=AOn4CLDc74dU_BQD5f27CkFi1Ca-_ii7wg">
                     <div class="sidebar-video-info">
