Fixed more responsive issues.

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                 <h1 class="video-title">How To Embed A Youtube Video</h1>
                 <div class="info">
                     <div class="views">
-                        <span>237,353 views</span>
-                        <span class="dot">•</span>
-                        <span>15 Mar 2013</span>
+                        <div>237,353 views</div>
+                        <div class="dot">•</div>
+                        <div>15 Mar 2013</div>
                     </div>
                     <div class="menu">
                         <a href="javascript:voud(0)">
