Cleaned up the code.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                 </g>
             </g>
         </svg> 
-    
         <form class="search">
             <input class="search-input " type="search" placeholder="Search" aria-label="Search">
             <button class="search-button" type="submit" onclick="return false;">
@@ -63,7 +62,6 @@
                 </g></svg>                                        
             </button>
         </form>     
-
         <div class="icon-buttons">
             <a class="icon-button">
                 <svg viewBox="0 0 24 24" preserveAspectRatio="xMidYMid meet" focusable="false">
@@ -97,7 +95,6 @@
 
     <main class="main-outer">
         <div class="main-content">
-
             <div class="main-video">                    
                 <iframe src="https://www.youtube.com/embed/ZnuwB35GYMY" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <h1 class="video-title">How To Embed A Youtube Video</h1>
@@ -147,45 +144,45 @@
                 <div class="separator"></div>
             </div>
             <aside class="video-recommendations">
-                <a class="sidebar-video" href="javascript:void(0)">                 
+                <a class="sidebar-video" href="javascript:void(0)">                
                     <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/yoW2jHoVdug/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&amp;rs=AOn4CLDc74dU_BQD5f27CkFi1Ca-_ii7wg">
                     <div class="sidebar-video-info">
                         <div class="sidebar-video-title">How to convert PDF to word without software</div>
                         <div>karim hamdadi</div>
-                        <div>16 M visits</div>
+                        <div>16M views</div>
                     </div>
                 </a>
                 <div class="separator"></div>
                 <a class="sidebar-video" href="javascript:void(0)">                
-                    <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/yoW2jHoVdug/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&amp;rs=AOn4CLDc74dU_BQD5f27CkFi1Ca-_ii7wg">
+                    <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/--oTQCysVTs/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLDiS2A3HRFPabkXy-kizSepTZTrfg">
                     <div class="sidebar-video-info">
-                        <div class="sidebar-video-title">How to convert PDF to word without software</div>
-                        <div>karim hamdadi</div>
-                        <div>16 M visits</div>
-                    </div>
-                </a>
-                <a class="sidebar-video" href="javascript:void(0)">                
-                    <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/yoW2jHoVdug/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&amp;rs=AOn4CLDc74dU_BQD5f27CkFi1Ca-_ii7wg">
-                        <div class="sidebar-video-info">
-                            <div class="sidebar-video-title">How to convert PDF to word without software</div>
-                            <div>karim hamdadi</div>
-                            <div>16 M visits</div>
-                        </div>
-                </a>
-                <a class="sidebar-video" href="javascript:void(0)">                
-                    <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/yoW2jHoVdug/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&amp;rs=AOn4CLDc74dU_BQD5f27CkFi1Ca-_ii7wg">
-                    <div class="sidebar-video-info">
-                        <div class="sidebar-video-title">How to convert PDF to word without software</div>
-                        <div>karim hamdadi</div>
-                        <div>16 M visits</div>
+                        <div class="sidebar-video-title">After Effects character animation workflow</div>
+                        <div>Emanuele Colombo</div>
+                        <div>8M views</div>
                     </div>
                 </a>
                 <a class="sidebar-video" href="javascript:void(0)">                 
-                    <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/yoW2jHoVdug/hqdefault.jpg?sqp=-oaymwEYCKgBEF5IVfKriqkDCwgBFQAAiEIYAXAB&amp;rs=AOn4CLDc74dU_BQD5f27CkFi1Ca-_ii7wg">
+                    <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/_vqrXIsAPXk/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLB_YKR4GuUoG510cZiDEkvoY81qeg">
                     <div class="sidebar-video-info">
-                        <div class="sidebar-video-title">How to convert PDF to word without software</div>
-                        <div>karim hamdadi</div>
-                        <div>16 M visits</div>
+                        <div class="sidebar-video-title">How To Make Your Facebook Completely Private</div>
+                        <div>Tutovids</div>
+                        <div>7M views</div>
+                    </div>
+                </a>
+                <a class="sidebar-video" href="javascript:void(0)">                
+                    <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/KL87H-Q0Pbc/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLAvK9EK160Q-7pC2NUbxtTAGhpbFg">
+                    <div class="sidebar-video-info">
+                        <div class="sidebar-video-title">How To Clear Google Search History | Delete Your Google Search History PERMANENTLY!</div>
+                        <div>Techoist</div>
+                        <div>203K views</div>
+                    </div>
+                </a>
+                <a class="sidebar-video" href="javascript:void(0)">                 
+                    <img class="sidebar-video-thumbnail" alt="video thumbnail" src="https://i.ytimg.com/vi/qaMf4hHR2hg/hqdefault.jpg?sqp=-oaymwEZCNACELwBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLCUK5kwcreLiVBRLoX2_EmEq_wiOA">
+                    <div class="sidebar-video-info">
+                        <div class="sidebar-video-title">What is Web Hosting?</div>
+                        <div>Easyspace</div>
+                        <div>14K views</div>
                     </div>
                 </a>
             </aside>
